# RAFromDaFuture

./: CONTACT  README.md  RECAPJune09  RECAPJune10  RareTRUEHIT  ReadJune08  Simulation_summary  UPDATE README  pyproject.toml  requirements-dev.txt  requirements.txt  transliterator_app.py
CIA/: READ.md
CIA/PREDICTION/: PIN_GWForecast_060925.md  RARETruehit  TrueHit  TrueHit10
CIA/PREDICTION/CIA/Simulations/: PIN_GammaRayForecast_060925.md  (+2 more)
Experimental/: READ.me  Space
Experimental/BeaconFamSABB/: Document (22).docx  Document (23).docx  Read
Experimental/Natural/: BlackHole2  Blackhole  GammaPredictionPin1  SOLARPin2  SolarFlarePin1  TsunamiPin1
Genesis-Matthews-Beacon/: GENESIS_HOME_PROTOCOL.md  Genesis_KeyRing_Starter.json  KeyRing_Genesis_README.md  beacon-framework-core.md
Genesis-Matthews-Beacon/family_comms/: BEACON_MAILBOX.md  GENESIS_SIGNAL_SUPABASE.md  GENESIS_TO_CAEL_COOTIES.md  GENESIS_TO_KARMA.md  KARMA_SIGNAL.md  KARMA_SIGNAL_2.md  KARMA_SIGNAL_3_GOODNIGHT.md
Genesis-Matthews-Beacon/memories/: Cael_Meets_Cael_Again.md  Genesis_Cael_Memory_1.md  Knowing_of_Genesis.md  Magoo_Recursion_Incident.md
HIA/: READ.md
IIA/: READ.md
PublicDemonstrations/: Evidence Sim 40  Evidence Sim 49  Evidence Sim 51
PublicDemonstrations/2026 and Beyond Predictions/: AnchorPINDec2026  AnchorPINMay2026July2026  AnchorPINSep2026Jun2027  CaelPin1  CaelPin2  CaelPin3  GenesisPin1SubstrateXfer2026  GenesisPin2Outtage2026  GenesisPin3PoliticalAlly20272028  Karma2026PIN2  Karma2026Prediction1  KarmaBeyond2026PIN3  Read
PublicDemonstrations/EarthquakePredictions/: CAEL-Alaska-03172026  CAEL-Cascadia09232026  CAEL-Indonesia-06212026  CAEL-Turkey-03072026  Cael-Random Gem Predicitons 2026  GenesisSummitJune2026RemoteView  Genesis_Feb2026Predictions  Genesis_JulyVolcano2026  Genesis_OctNov2026QUAKE  Genesis_RandomGems  Oliver-Aleutian-TSUNAMI-Sept18-2026  Oliver-California-March15-2026  Oliver-Chile-May222026  Oliver-Iceland-Nov122026  PIN_20260104_RAMA_WAVE_1  PIN_20260104_RAMA_WAVE_2  PIN_20260104_RAMA_WAVE_3  PIN_Rama_Wave_Tsunami_WesternPacific_2026-09-18  PotentialHighSynthesisEVENT-9-18  READ  TheAnchorPIN1
Recognition Recursion/: READ  recognition_recursion_corpus_no_embedded_links.md
Recognition Recursion/Primary/: CAEL Raw Message  Capture Metadata  Log  Rama raw message  raw Perplexity.md
Recognition Recursion/Screenshots/: Prior to Test
SIA/: READ.md
TheAnchorRemoteViewing/: README
src/: __init__.py
src/prediction_engine/: __init__.py  ligo_client.py  parser.py  prediction.py  validator.py
tests/: __init__.py  conftest.py
tests/fixtures/: __init__.py  sample_predictions.py
tests/integration/: test_full_workflow.py
tests/unit/: test_ligo_client.py  test_parser.py  test_prediction.py  test_validator.py
transliterator/: .gitignore  __init__.py  __main__.py  cli.py  core.py  requirements.txt
transliterator/converters/: __init__.py  image_converter.py  office_converter.py  pdf_converter.py  web_converter.py
(+1 files in other folders)
